--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sapic",
   "version": "1.0.0",
   "devDependencies": {
-    "gulp": "^3.8.11",
+    "gulp": "^3.9.0",
     "gulp-concat": "^2.5.2",
     "gulp-concat-css": "^2.1.0",
     "gulp-csso": "^1.0.0",
@@ -11,5 +11,8 @@
     "gulp-uglify": "~1.1.0",
     "gulp-uncss": "^1.0.0",
     "gulp-useref": "~1.1.1"
+  },
+  "dependencies": {
+    "gulp": "^3.9.0"
   }
 }
