--- a/circle.yml
+++ b/circle.yml
@@ -24,5 +24,5 @@ test:
         pwd: out
     - git push --force --quiet "https://${GH_ATOKEN}@github.com/SAPIC/SAPIC.github.io"> /dev/null 2>&1:
         pwd: out
-    - scp -r ./* circleci@46.101.12.105:/var/www/steam.design/:
+    - scp -r ./* circleci@23.236.54.42:~/www:
         pwd: out
