--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "gulp-useref": "~1.1.1"
   },
   "dependencies": {
-    "gulp": "^3.9.0"
+    "gulp": "^3.9.0",
+    "gulp-postcss": "^7.0.1",
+    "postcss-uncss": "^0.16.1"
   }
 }
