--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
   "name": "sapic",
   "version": "1.0.0",
+  "scripts": {
+    "dev": "cd out && static-server -p 3000",
+    "build": "gulp"
+  },
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-concat": "^2.5.2",
     "gulp-concat-css": "^2.1.0",
-    "gulp-csso": "^1.0.0",
     "gulp-minify-html": "~1.0.0",
     "gulp-rimraf": "^0.1.1",
     "gulp-uglify": "^3.0.0",
-    "gulp-uncss": "^1.0.0",
     "gulp-useref": "~1.1.1"
   },
   "dependencies": {
+    "cssnano": "^3.10.0",
     "gulp": "^3.9.0",
     "gulp-postcss": "^7.0.1",
-    "postcss-uncss": "^0.16.1"
+    "postcss-uncss": "^0.16.1",
+    "static-server": "^2.2.0",
+    "uncss": "^0.16.2"
   }
 }
