--- a/circle.yml
+++ b/circle.yml
@@ -5,9 +5,7 @@ dependencies:
   cache_directories:
     - node_modules
   override:
-    - npm install
-    - npm install --global gulp
-    - npm install --save-dev gulp
+    - yarn
 
 test:
   override:
@@ -15,6 +13,6 @@ test:
     - mkdir out
     - git clone https://github.com/SAPIC/SAPIC.github.io ./:
         pwd: out
-    - CIRCLE_BUILD_NUM=${CIRCLE_BUILD_NUM} gulp
+    - CIRCLE_BUILD_NUM=${CIRCLE_BUILD_NUM} yarn build
     - scp -r ./* circleci@35.188.219.150:~/www:
         pwd: out
