--- a/circle.yml
+++ b/circle.yml
@@ -5,7 +5,7 @@ dependencies:
   cache_directories:
     - node_modules
   override:
-    - yarn
+    - /usr/local/bin/yarn
 
 test:
   override:
@@ -13,6 +13,6 @@ test:
     - mkdir out
     - git clone https://github.com/SAPIC/SAPIC.github.io ./:
         pwd: out
-    - CIRCLE_BUILD_NUM=${CIRCLE_BUILD_NUM} yarn build
+    - CIRCLE_BUILD_NUM=${CIRCLE_BUILD_NUM} /usr/local/bin/yarn build
     - scp -r ./* circleci@35.188.219.150:~/www:
         pwd: out
