--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cssnano": "^3.10.0",
     "gulp": "^3.9.0",
     "gulp-postcss": "^7.0.1",
+    "gulp-rename": "^1.2.2",
     "postcss-uncss": "^0.16.1",
     "static-server": "^2.2.0",
     "uncss": "^0.16.2"
