--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
     "build": "gulp"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.5.2",
-    "gulp-concat-css": "^2.1.0",
-    "gulp-minify-html": "~1.0.0",
-    "gulp-rimraf": "^0.1.1",
-    "gulp-uglify": "^3.0.0",
-    "gulp-useref": "~1.1.1"
+    "gulp": "^4.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-concat-css": "^3.1.0",
+    "gulp-minify-html": "^1.0.6",
+    "gulp-rimraf": "^0.2.2",
+    "gulp-uglify": "^3.0.1",
+    "gulp-useref": "^3.1.5"
   },
   "dependencies": {
-    "cssnano": "^3.10.0",
-    "gulp-postcss": "^7.0.1",
-    "gulp-rename": "^1.2.2",
+    "cssnano": "^4.1.4",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^1.4.0",
     "postcss-uncss": "^0.16.1",
-    "static-server": "^2.2.0",
+    "static-server": "^2.2.1",
     "uncss": "^0.16.2"
   }
 }
