--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "gulp-minify-html": "^1.0.6",
     "gulp-rimraf": "^0.2.2",
     "gulp-uglify": "^3.0.1",
-    "gulp-useref": "^1.1.1"
+    "gulp-useref": "^1.3.0"
   },
   "dependencies": {
-    "cssnano": "^4.1.4",
+    "cssnano": "^4.1.7",
+    "delegate": "^3.2.0",
+    "fs": "0.0.2",
+    "good-listener": "^1.2.2",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "postcss-uncss": "^0.16.1",
+    "select": "^1.1.2",
     "static-server": "^2.2.1",
+    "tiny-emitter": "^2.0.2",
     "uncss": "^0.16.2"
   }
 }
