--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
-ko_fi: # steamdesign
-custom: # https://paypal.me/steamdesign
+ko_fi: steamdesign
+custom: https://paypal.me/steamdesign
