--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dependencies": {
         "cssnano": "^4.1.10",
         "good-listener": "^1.2.2",
+        "gulp-html-beautify": "^1.0.1",
         "gulp-postcss": "^8.0.0",
+        "gulp-pug": "^4.0.1",
         "gulp-rename": "^1.4.0",
         "postcss-uncss": "^0.17.0",
         "uncss": "^0.17.0"
