--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
         "gulp": "^4.0.2",
         "gulp-concat": "^2.6.1",
         "gulp-concat-css": "^3.1.0",
-        "gulp-rimraf": "^0.2.2",
         "gulp-uglify": "^3.0.2",
         "gulp-useref": "^3.1.6"
     },
     "dependencies": {
         "cssnano": "^4.1.10",
+        "del": "^5.0.0",
         "gulp-html-beautify": "^1.0.1",
         "gulp-postcss": "^8.0.0",
         "gulp-pug": "^4.0.1",
