--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "dependencies": {
         "cssnano": "^4.1.10",
         "del": "^5.0.0",
-        "gulp-html-beautify": "^1.0.1",
         "gulp-postcss": "^8.0.0",
+        "gulp-pretty-html": "^2.0.10",
         "gulp-pug": "^4.0.1",
         "gulp-pug-linter": "^1.2.0",
         "gulp-rename": "^1.4.0",
