--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "cssnano": "^4.1.10",
         "del": "^5.0.0",
+        "gulp-imagemin": "^6.0.0",
         "gulp-postcss": "^8.0.0",
         "gulp-pretty-html": "^2.0.10",
         "gulp-pug": "^4.0.1",
