--- a/.github/workflows/deploy_docker.yml
+++ b/.github/workflows/deploy_docker.yml
@@ -17,3 +17,19 @@ jobs:
         run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASS }}
       - name: Push
         run: docker push sapic/sapic
+      - name: Update on server
+        run: |
+          ssh_path="$HOME/.ssh"
+          mkdir "$ssh_path"
+          touch "$ssh_path/known_hosts"
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > "$ssh_path/deploy_key"
+          chmod 700 "$ssh_path"
+          chmod 600 "$ssh_path/known_hosts"
+          chmod 600 "$ssh_path/deploy_key"
+          ssh-keyscan -H 159.65.199.184 >> "$ssh_path/known_hosts"
+
+          ssh -i $HOME/.ssh/deploy_key root@159.65.199.184 << EOF
+            docker pull sapic/sapic
+            docker stop sapic && docker rm sapic
+            docker run -d -it --restart="always" --name sapic --network sapic sapic/sapic:latest
+          EOF
