--- a/.github/workflows/deploy_docker.yml
+++ b/.github/workflows/deploy_docker.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Build
-        run: docker build . -t sapic/sapic
+        run: docker build --build-arg CIRCLE_BUILD_NUM="${GITHUB_SHA}" . -t sapic/sapic
       - name: Login
         run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASS }}
       - name: Push
