--- a/.github/workflows/deploy_docker.yml
+++ b/.github/workflows/deploy_docker.yml
@@ -12,7 +12,9 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Build
-        run: docker build --build-arg CIRCLE_BUILD_NUM=${{ github.sha }} . -t sapic/sapic
+        run: |
+          githubsha="${{ github.sha }}"
+          docker build --build-arg CIRCLE_BUILD_NUM=${githubsha:0:8} . -t sapic/sapic
       - name: Login
         run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASS }}
       - name: Push
