--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
         "staticPath": "static"
     },
     "devDependencies": {
+        "jquery": "^3.4.1",
         "parcel-bundler": "^1.12.4",
         "parcel-plugin-purgecss": "2.1.3",
         "parcel-plugin-static-files-copy": "^2.2.1",
         "pug": "^2.0.4",
-        "stylus": "^0.54.7",
-        "jquery": "^3.4.1"
+        "stylus": "^0.54.7"
+    },
+    "dependencies": {
+        "cash-dom": "^4.1.5"
     }
 }
