--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
         "staticPath": "static"
     },
     "devDependencies": {
-        "jquery": "^3.4.1",
         "parcel-bundler": "^1.12.4",
+        "parcel-plugin-bundle-visualiser": "^1.2.0",
         "parcel-plugin-purgecss": "2.1.3",
         "parcel-plugin-static-files-copy": "^2.2.1",
         "pug": "^2.0.4",
         "stylus": "^0.54.7"
     },
     "dependencies": {
-        "cash-dom": "^4.1.5"
+        "cash-dom": "^4.1.5",
+        "clipboard": "^2.0.4",
+        "interactjs": "^1.6.3",
+        "store": "^2.0.12"
     }
 }
