--- a/now.json
+++ b/now.json
@@ -1,5 +1,13 @@
 {
   "version": 2,
-  "builds": [],
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@now/static-build",
+      "config": {
+        "distDir": "dist"
+      }
+    }
+  ],
   "build": {}
 }
