--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "parcel-bundler": "^1.12.4",
         "parcel-plugin-purgecss": "2.1.3",
         "parcel-plugin-static-files-copy": "^2.2.1",
-        "parcel-plugin-sw-precache": "^1.1.1",
+        "parcel-plugin-workbox": "truecarry/parcel-plugin-workbox",
         "pug": "^2.0.4",
         "stylus": "^0.54.7"
     },
@@ -27,5 +27,8 @@
         "clipboard": "^2.0.4",
         "interactjs": "^1.6.3",
         "store": "^2.0.12"
+    },
+    "workbox": {
+        "importScripts": []
     }
 }
