--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     },
     "devDependencies": {
         "parcel-bundler": "^1.12.4",
-        "parcel-plugin-purgecss": "2.1.3",
-        "parcel-plugin-static-files-copy": "^2.3.1",
-        "pug": "^2.0.4",
+        "parcel-plugin-purgecss": "^3.0.0",
+        "parcel-plugin-static-files-copy": "^2.4.3",
+        "pug": "^3.0.0",
         "stylus": "^0.54.7"
     },
     "dependencies": {
-        "cash-dom": "^7.0.0",
+        "cash-dom": "^7.0.3",
         "clipboard": "^2.0.6",
-        "interactjs": "^1.9.8",
+        "interactjs": "^1.9.19",
         "store": "^2.0.12"
     },
     "workbox": {
