--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "repository": "git@github.com:sapic/sapic.git",
   "author": "Tim <truecarry@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "vue build src/index.js"
+  },
   "dependencies": {
     "@tweenjs/tween.js": "^18.6.0",
     "vue": "^2.0.0",
