--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Tim <truecarry@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "vue build src/index.js"
+    "build": "vue-cli-service build src/index.js"
   },
   "dependencies": {
     "@tweenjs/tween.js": "^18.6.0",
@@ -15,6 +15,7 @@
     "vuex": "^3.5.1"
   },
   "devDependencies": {
+    "@vue/cli-service": "^4.4.6",
     "@vue/component-compiler-utils": "^3.1.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.4.0",
