--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tweenjs/tween.js": "^18.6.0",
     "vue": "^2.0.0",
     "vue-hot-reload-api": "^2.3.4",
+    "vue-meta": "^2.4.0",
+    "vue-router": "^3.3.4",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
