--- a/package.json
+++ b/package.json
@@ -10,19 +10,22 @@
     "dev": "vue-cli-service serve src/index.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/vue-fontawesome": "2",
     "@tweenjs/tween.js": "^18.6.0",
-    "vue": "^2.6.12",
-    "vue-hot-reload-api": "^2.3.4",
-    "vue-meta": "^2.4.0",
-    "vue-router": "^3.4.6",
-    "vuex": "^3.5.1",
     "@vue/cli-service": "^4.5.7",
     "@vue/component-compiler-utils": "^3.2.0",
-    "vue-template-compiler": "^2.6.12",
     "pug": "^3.0.0",
     "pug-plain-loader": "^1.0.0",
     "stylus": "^0.54.8",
     "stylus-loader": "^3.0.0",
+    "vue": "^2.6.12",
+    "vue-hot-reload-api": "^2.3.4",
+    "vue-meta": "^2.4.0",
+    "vue-router": "^3.4.6",
+    "vue-template-compiler": "^2.6.12",
+    "vuex": "^3.5.1",
     "webpack": "^5.0.0"
   },
   "devDependencies": {
