--- a/.github/workflows/deploy_docker_old.yml
+++ b/.github/workflows/deploy_docker_old.yml
@@ -32,5 +32,5 @@ jobs:
           ssh -i $HOME/.ssh/deploy_key root@159.65.199.184 << EOF
             docker pull sapic/sapic:old
             docker stop sapicold && docker rm sapicold
-            docker run -d -it --restart="always" --name sapicold --network sapic sapic/sapic:latest
+            docker run -d -it --restart="always" --name sapicold --network sapic sapic/sapic:old
           EOF
