--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tweenjs/tween.js": "^18.6.0",
     "@vue/cli-service": "^4.5.7",
     "@vue/component-compiler-utils": "^3.2.0",
+    "lottie-web": "^5.7.6",
     "pug": "^3.0.0",
     "pug-plain-loader": "^1.0.0",
     "stylus": "^0.54.8",
