--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "stylus-loader": "^3.0.0",
     "vue": "^2.6.12",
     "vue-hot-reload-api": "^2.3.4",
+    "vue-i18n": "^8.0.0",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.4.6",
     "vue-template-compiler": "^2.6.12",
