--- a/package.json
+++ b/package.json
@@ -1,32 +1,30 @@
 {
   "name": "sapic",
   "version": "1.0.0",
-  "main": "index.js",
-  "repository": "git@github.com:sapic/sapic.git",
   "author": "Tim <truecarry@gmail.com>",
-  "license": "MIT",
   "scripts": {
     "build": "vue-cli-service build src/index.js",
     "dev": "vue-cli-service serve src/index.js"
   },
+  "main": "index.js",
   "dependencies": {
-    "@vue/cli-service": "^4.5.13",
+    "@vue/cli-service": "~5.0.0-beta.2",
     "@vue/component-compiler-utils": "^3.2.0",
     "lottie-web": "^5.7.7",
     "pug": "^3.0.0",
     "pug-plain-loader": "^1.0.0",
     "stylus": "^0.54.8",
     "stylus-loader": "^3.0.0",
-    "vue": "^2.6.12",
+    "vue": "^3.1.4",
     "vue-hot-reload-api": "^2.3.4",
-    "vue-i18n": "^8.0.0",
+    "vue-i18n": "^9.1.6",
     "vue-meta": "^2.4.0",
-    "vue-router": "^3.4.6",
-    "vue-template-compiler": "^2.6.12",
-    "vuex": "^3.5.1",
+    "vue-router": "^4.0.0",
+    "vuex": "^4.0.2",
     "webpack": "^5.0.0"
   },
   "devDependencies": {
+    "@vue/compiler-sfc": "^3.1.4",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.11.0",
     "eslint-config-standard": "^14.1.1",
@@ -36,6 +34,8 @@
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.0.0"
   },
+  "license": "MIT",
+  "repository": "git@github.com:sapic/sapic.git",
   "targets": {
     "browser": {
       "engines": {
