--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "stylus-loader": "^3.0.0",
     "vue": "^3.1.4",
     "vue-hot-reload-api": "^2.3.4",
-    "vue-i18n": "^9.1.6",
+    "vue-i18n-lite": "^1.0.1",
     "vue-meta": "^2.4.0",
     "vue-router": "^4.0.0",
     "vuex": "^4.0.2",
