--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vue": "^3.2.31",
     "vue-i18n-lite": "^1.0.2",
     "vue-router": "^4.0.14",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vite": "^2.9.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
@@ -25,8 +26,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-vue": "^8.5.0",
-    "vite": "^2.9.1"
+    "eslint-plugin-vue": "^8.5.0"
   },
   "license": "MIT",
   "repository": "git@github.com:sapic/sapic.git",
