--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@vitejs/plugin-vue": "^2.3.1",
     "stylus": "^0.57.0",
     "stylus-loader": "^6.2.0",
+    "vite": "^2.9.1",
     "vue": "^3.2.31",
     "vue-i18n-lite": "^1.0.2",
     "vue-router": "^4.0.14",
-    "vuex": "^4.0.2",
-    "vite": "^2.9.1"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.3.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.12.0",
     "eslint-config-standard": "^16.0.3",
