--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "@vitejs/plugin-vue": "^3.0.3",
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
+    "pinia": "^2.0.21",
     "stylus": "^0.57.0",
     "stylus-loader": "^6.2.0",
     "vite": "^3.0.9",
     "vue": "^3.2.37",
     "vue-i18n-lite": "^1.0.2",
-    "vue-router": "^4.1.5",
-    "vuex": "^4.0.2"
+    "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@types/node": "^18.7.13",
