Update nginx to proxy language prefixes

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,26 @@ server {
     try_files $uri /index.html;
   }
 
+  location /en {
+    root /usr/share/nginx/html;
+    try_files $uri /index.html;
+  }
+
+  location /ru {
+    root /usr/share/nginx/html;
+    try_files $uri /index.html;
+  }
+
+  location /zh {
+    root /usr/share/nginx/html;
+    try_files $uri /index.html;
+  }
+
+  location /tr {
+    root /usr/share/nginx/html;
+    try_files $uri /index.html;
+  }
+
   location / {
     # This would be the directory where your React app's static files are stored at
     root /usr/share/nginx/html;
